[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scripts/Menu.gd" type="Script" id=1]
[ext_resource path="res://Assets/Title.png" type="Texture" id=2]
[ext_resource path="res://Assets/ContinueButton.png" type="Texture" id=3]
[ext_resource path="res://Assets/NewGameButton.png" type="Texture" id=4]
[ext_resource path="res://Assets/ExitButton.png" type="Texture" id=5]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 51, 14 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 4 )
region = Rect2( 102, 0, 51, 14 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 51, 0, 51, 14 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 51, 14 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 102, 0, 51, 14 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 51, 0, 51, 14 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 153, 0, 51, 14 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 51, 14 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 5 )
region = Rect2( 102, 0, 51, 14 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 5 )
region = Rect2( 51, 0, 51, 14 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.82837
margin_right = 2.82837
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Sprite" parent="."]
position = Vector2( 960, 300 )
scale = Vector2( 10, 10 )
texture = ExtResource( 2 )

[node name="NewGame" type="TextureButton" parent="."]
margin_left = 960.0
margin_top = 540.0
margin_right = 1011.0
margin_bottom = 554.0
rect_scale = Vector2( 10, 10 )
rect_pivot_offset = Vector2( 25, 7 )
texture_normal = SubResource( 1 )
texture_pressed = SubResource( 2 )
texture_hover = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue" type="TextureButton" parent="."]
margin_left = 960.0
margin_top = 700.0
margin_right = 1011.0
margin_bottom = 714.0
rect_scale = Vector2( 10, 10 )
rect_pivot_offset = Vector2( 25, 7 )
disabled = true
texture_normal = SubResource( 4 )
texture_pressed = SubResource( 5 )
texture_hover = SubResource( 6 )
texture_disabled = SubResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="TextureButton" parent="."]
margin_left = 960.0
margin_top = 860.0
margin_right = 1011.0
margin_bottom = 874.0
rect_scale = Vector2( 10, 10 )
rect_pivot_offset = Vector2( 25, 7 )
texture_normal = SubResource( 8 )
texture_pressed = SubResource( 9 )
texture_hover = SubResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_down" from="NewGame" to="." method="_on_NewGame_button_down"]
[connection signal="button_down" from="Continue" to="." method="_on_Continue_button_down"]
[connection signal="button_down" from="Exit" to="." method="_on_Exit_button_down"]
